third_party/move/move-compiler-v2/tests/bytecode-generator/bug_14629_fail.exp

Diagnostics:
error: constraint `integer` does not have required ability `key`
  ┌─ tests/bytecode-generator/bug_14629_fail.move:6:32
  │
6 │         let R { r: _ } = R {r: 0};
  │                                ^
